    (Rushabh S Shah via kihwal)

    HADOOP-10379. Protect authentication cookies with the HttpOnly and Secure
    flags. (wheat9)

    HADOOP-10211. Enable RPC protocol to negotiate SASL-QOP values between
    clients and servers. (Benoy Antony via Arpit Agarwal)

    HADOOP-10386. Log proxy hostname in various exceptions being thrown in a HA
    setup. (wheat9)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-10320. Javadoc in InterfaceStability.java lacks final </ul>.
    (René Nyffenegger via cnauroth)
    
    HADOOP-10085. CompositeService should allow adding services while being 
    inited. (Steve Loughran via kasha)

    HADOOP-10327. Trunk windows build broken after HDFS-5746.
    (Vinay via cnauroth)

    HADOOP-10330. TestFrameDecoder fails if it cannot bind port 12345.
    (Arpit Agarwal)

    HADOOP-10326. M/R jobs can not access S3 if Kerberos is enabled. (bc Wong
    via atm)

    HADOOP-10338. Cannot get the FileStatus of the root inode from the new
    Globber (cmccabe)

    HADOOP-10249. LdapGroupsMapping should trim ldap password read from file.
    (Dilli Armugam via suresh)

    HADOOP-10346. Deadlock while logging tokens (jlowe)

    HADOOP-10328. loadGenerator exit code is not reliable.
    (Haohui Mai via cnauroth)

    HADOOP-10355. Fix TestLoadGenerator#testLoadGenerator. (Haohui Mai via jing9)

    HADOOP-10368. InputStream is not closed in VersionInfo ctor.
    (Tsuyoshi OZAWA via szetszwo)

    HADOOP-10353. FsUrlStreamHandlerFactory is not thread safe.
    (Tudor Scurtu via cnauroth)

    HADOOP-10393. Fix the javac warnings in hadoop-auth.  (szetszwo)

    HADOOP-10395. TestCallQueueManager is flaky. (Arpit Agarwal)

    HADOOP-10394. TestAuthenticationFilter is flaky. (Arpit Agarwal)
    
    HADOOP-10337 ConcurrentModificationException from
    MetricsDynamicMBeanBase.createMBeanInfo() (Liang Xie via stack)

    HADOOP-10407. Fix the javac warnings in org.apache.hadoop.ipc package.
    (szetszwo)
